correji el posicionamiento de las imagenes en la galeria con un margin top y bottom, agregue un favicon, seo, titulos a las paginas y todas las media queries las puse en un sass aparte y luego las importe al principal.

--- a/pages/Pedidos.html
+++ b/pages/Pedidos.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Purchase</title>
+    <meta name="description" content="Hi, i'm Loan. I'm an argentinian illustrator and comic book artist">
+    <meta name="keywords" content="arte, dibujo, comics, storyboard, layouts">
+    <link rel="shortcut icon" href="../Assets/icono.png">
     <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
     <link rel="stylesheet" href="../style/style.css">
-    <title>Pedidos</title>
 </head>
 
 <body>
