--- a/pages/Galeria.html
+++ b/pages/Galeria.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gallery</title>
+    <meta name="description" content="Hi, i'm Loan. I'm an argentinian illustrator and comic book artist">
+    <meta name="keywords" content="arte, dibujo, comics, storyboard, layouts">
+    <link rel="shortcut icon" href="../Assets/icono.png">
     <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
     <link rel="stylesheet" href="../style/style.css">
-    <title>Galeria</title>
 </head>
 
 <body>
@@ -18,7 +21,7 @@
                     <h2>
                         Loan art
                     </h2>
-                    <img class="logo" src="./Assets/Captura de pantalla 2022-09-29 201215_preview_rev_1.png" alt="">
+                    <img class="logo" src="../Assets/Captura de pantalla 2022-09-29 201215_preview_rev_1.png" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
