--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loan arts</title>
-    <meta name="description" content="Hi, i'm Loan. I'm an argentinian illustrator and comic book artist">
+    <meta name="description" content="Hola!, soy Loan, soy un ilustrador y dibujante de cómics argentino">
     <meta name="keywords" content="arte, dibujo, comics, storyboard, layouts">
     <link rel="shortcut icon" href="./Assets/icono.png">
     <link rel="stylesheet" href="./bootstrap-5.2.2-dist/css/bootstrap.css">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 
 <body>
@@ -31,27 +32,27 @@
                     <ul class="navbar-nav">
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="./index.html">
-                                <h5>Main</h5>
+                                <h5>Inicio</h5>
                             </a>
                         </li>
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="./pages/Galeria.html">
-                                <h5>Gallery</h5>
+                                <h5>Galeria</h5>
                             </a>
                         </li>
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="./pages/SobreMi.html">
-                                <h5>About Me</h5>
+                                <h5>Sobre mi</h5>
                             </a>
                         </li>
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="./pages/Pedidos.html">
-                                <h5>Purchase</h5>
+                                <h5>Pedidos</h5>
                             </a>
                         </li>
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="./pages/Contacto.html">
-                                <h5>Contact</h5>
+                                <h5>Contacto</h5>
                             </a>
                         </li>
                     </ul>
@@ -60,14 +61,34 @@
         </nav>
     </header>
     <main id="grilla_inicio">
-        <section id="i1">
-            <img src="./Assets/loan-art-demonios-internos1.jpg">
+        
+        <section class="wow animate__animated animate__fadeInLeftBig" id="texto1">
+            <h1 id="titulo">
+                Lopez Iván
+            </h1>
+            <h4>Ilustrador, y artista de comics</h4>
+            <h4>
+                Venta de ilustraciones con envio a todo el pais y dibujos por comision.
+            </h4>
         </section>
-        <section id="i2">
-            <img src="./Assets/loan-art-heroes-de-la-salud-rgb redimensionada.jpg">
+
+        <section id="imagen_inicio1" class=" wow animate__animated animate__fadeIn">
+            <img src="./Assets/loan-art-demonios-internos1.jpg" alt="hombre siendo atormentado por demonios internos" class="imagen_inicio">
         </section>
-        <section id="i3">
-            <img src="./Assets/loan-art-muerte-roja.jpg">
+
+        <section id="imagen_inicio2" class="wow animate__animated animate__fadeIn">
+            <img src="./Assets/loan-art-heroes-de-la-salud-rgb redimensionada.jpg" alt="medicos siendo aplaudidos" class="imagen_inicio">
+        </section>
+
+        <section id="texto2" class="wow animate__animated animate__fadeInRightBig">
+            <h2>
+                ¿Buscas un artista grafico que de vida a tus ideas?
+            </h2>
+            <section id="boton_a_galeria">
+                <a class="nav-link" href="./pages/Galeria.html">
+                    <h5>Cliqueá y pasá a ver mi contenido</h5>
+                </a>
+            </section>
         </section>
     </main>
 
@@ -76,16 +97,20 @@
             <h5>2022, Loan arts ©</h5>
         </section>
         <section id="redes">
-            <a href="https://www.instagram.com/loan_art00/" id="ig">
+            <a href="https://www.instagram.com/loan_art00/" id="ig" alt="instagram">
                 <img src="./Assets/instagram icono.png">
             </a>
-            <a href="https://www.facebook.com/loan.arts.90" id="fb">
+            <a href="https://www.facebook.com/loan.arts.90" id="fb" alt="facebook">
                 <img src="./Assets/png-transparent-facebook-computer-icons-layout-rectangle-logo-brand.png">
             </a>
         </section>
     </footer>
 
 
+    <script src="./Assets/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
     <script src="./bootstrap-5.2.2-dist/js/bootstrap.bundle.js"></script>
 </body>
 
