--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <meta name="description" content="Hi, i'm Loan. I'm an argentinian illustrator and comic book artist">
+    <title>Contacto</title>
+    <meta name="description" content="Hola!, soy Loan, soy un ilustrador y dibujante de cómics argentino">
     <meta name="keywords" content="arte, dibujo, comics, storyboard, layouts">
     <link rel="shortcut icon" href="../Assets/icono.png">
     <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
@@ -31,27 +31,27 @@
                     <ul class="navbar-nav">
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="../index.html">
-                                <h5>Main</h5>
+                                <h5>Inicio</h5>
                             </a>
                         </li>
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="../pages/Galeria.html">
-                                <h5>Gallery</h5>
+                                <h5>Galeria</h5>
                             </a>
                         </li>
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="../pages/SobreMi.html">
-                                <h5>About Me</h5>
+                                <h5>Sobre mi</h5>
                             </a>
                         </li>
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="../pages/Pedidos.html">
-                                <h5>Purchase</h5>
+                                <h5>Pedidos</h5>
                             </a>
                         </li>
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="../pages/Contacto.html">
-                                <h5>Contact</h5>
+                                <h5>Contacto</h5>
                             </a>
                         </li>
                     </ul>
@@ -61,37 +61,27 @@
     </header>
 
     <main>
-        <section class="pedidos">
-            <h1>Rellene con sus datos...</h1>
-            <form>
-                <fieldset>
-                    <legend>Datos</legend>
-                    <div>
-                        <div>
-                            <label>Nombre y Apellido</label>
-                            <input type="text">
-                        </div>
-
-                        <div>
-                            <label>Correo electronico</label>
-                            <input type="email">
-                        </div>
-
-                        <div>
-                            <label>Escriba su mensaje aqui</label>
-                            <input type="text">
-                        </div>
-                        <div>
-                            <label>Acepta los terminos y condiciones</label>
-                            <input type="checkbox">
-                        </div>
-                        <div>
-                            <input type="submit">
-                        </div>
-                    </div>
-                </fieldset>
-            </form>
-            <h3>su mensaje sera respondido en la brevedad.</h3>
+        <section>
+            <label for=""><h2>Contactate conmigo...</h2></label>
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Email</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Deje su mensaje aqui</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <div class="col-12">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                    <label class="form-check-label" for="invalidCheck">
+                        Acepta los terminos y condiciones
+                    </label>
+                </div>
+            </div>
+            <div class="col-12">
+                <button class="btn btn-primary" type="submit">Enviar</button>
+            </div>
         </section>
     </main>
 
@@ -100,10 +90,10 @@
             <h5>2022, Loan arts ©</h5>
         </section>
         <section id="redes">
-            <a href="https://www.instagram.com/loan_art00/" id="ig">
+            <a href="https://www.instagram.com/loan_art00/" id="ig" alt="instagram">
                 <img src="../Assets/instagram icono.png">
             </a>
-            <a href="https://www.facebook.com/loan.arts.90" id="fb">
+            <a href="https://www.facebook.com/loan.arts.90" id="fb" alt="facebook">
                 <img src="../Assets/png-transparent-facebook-computer-icons-layout-rectangle-logo-brand.png">
             </a>
         </section>
