--- a/pages/Pedidos.html
+++ b/pages/Pedidos.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Purchase</title>
-    <meta name="description" content="Hi, i'm Loan. I'm an argentinian illustrator and comic book artist">
+    <title>Pedidos</title>
+    <meta name="description" content="Hola!, soy Loan, soy un ilustrador y dibujante de cómics argentino">
     <meta name="keywords" content="arte, dibujo, comics, storyboard, layouts">
     <link rel="shortcut icon" href="../Assets/icono.png">
     <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
@@ -31,27 +31,27 @@
                     <ul class="navbar-nav">
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="../index.html">
-                                <h5>Main</h5>
+                                <h5>Inicio</h5>
                             </a>
                         </li>
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="../pages/Galeria.html">
-                                <h5>Gallery</h5>
+                                <h5>Galeria</h5>
                             </a>
                         </li>
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="../pages/SobreMi.html">
-                                <h5>About Me</h5>
+                                <h5>Sobre mi</h5>
                             </a>
                         </li>
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="../pages/Pedidos.html">
-                                <h5>Purchase</h5>
+                                <h5>Pedidos</h5>
                             </a>
                         </li>
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="../pages/Contacto.html">
-                                <h5>Contact</h5>
+                                <h5>Contacto</h5>
                             </a>
                         </li>
                     </ul>
@@ -59,96 +59,66 @@
             </div>
         </nav>
     </header>
-
     <main>
-        <section class="pedidos">
-            <h1>Realice su pedido a continuacion...</h1>
-            <form>
-                <fieldset>
-                    <legend>Datos personales</legend>
-                    <section>
-                        <div>
-                            <label>Nombre/s</label>
-                            <input type="text">
-                        </div>
-                        <div>
-                            <label>Apellido</label>
-                            <input type="text">
-                        </div>
-                        <div>
-                            <label>Correo electronico</label>
-                            <input type="text">
-                        </div>
-                        <div>
-                            <label>Telefono</label>
-                            <input type="text">
-                        </div>
-                    </section>
-                </fieldset>
-                <fieldset>
-                    <legend>Detalles del producto</legend>
-                    <section>
-                        <div>
-                            <label>Que dibujo desea comprar?</label>
-                            <select name="Obras">
-                                <option></option>
-                                <option>15 Dias Mas</option>
-                                <option>Batman Vampire</option>
-                                <option>Demonios Internos</option>
-                                <option>Social Distance</option>
-                                <option>Healthcare Heroes</option>
-                                <option>Extraños Sucesos en el Cementerio</option>
-                                <option>Muerte Roja</option>
-                                <option>Pizza y Alcohol en Gel</option>
-                                <option>Desolate Wasteland</option>
-                                <option>The Hand</option>
-                                <option>An Unexpected Visit</option>
-                                <option>Too Much to Tell</option>
-                            </select>
-                        </div>
-
-                        <div>
-                            <label>cantidad</label>
-                            <select name="Cantidad">
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                            </select>
-                        </div>
-                    </section>
-                </fieldset>
-                <fieldset>
-                    <legend>Detalles del envio</legend>
-                    <section>
-                        <div>
-                            <label>Seleccione el Metodo de Envio</label>
-                            <div>
-                                A domicilio
-                                <input type="radio" name="envio" id="a domicilio">
-                            </div>
-
-                            <div>
-                                Retiro en punto de entrega
-                                <input type="radio" name="envio" id="retiro">
-                            </div>
-
-                        </div>
-                    </section>
-                </fieldset>
-                <fieldset>
-                    <section>
-                        <div>
-                            <label for="">Acepta los terminos y condiciones</label>
-                            <input type="checkbox" name="" id="">
-                        </div>
-                        <div>
-                            <input type="submit" value="enviar">
-                        </div>
-                    </section>
-                </fieldset>
+        <section>
+            <label for=""><h2>Realice su pedido...</h2></label>
+            <form class="row g-3 needs-validation" novalidate id="formulario">
+                <div class="col-md-4">
+                    <label for="validationCustom01" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="validationCustom01" value="" required>
+                </div>
+                <div class="col-md-4">
+                    <label for="validationCustom02" class="form-label">Apellido</label>
+                    <input type="text" class="form-control" id="validationCustom02" value="" required>
+                </div>
+                <div class="col-md-4">
+                    <label for="exampleInputEmail1" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <div class="col-md-6">
+                    <label for="validationCustom03" class="form-label">Ciudad</label>
+                    <input type="text" class="form-control" id="validationCustom03" required>
+                </div>
+                <div class="col-md-3">
+                    <label for="validationCustom03" class="form-label">Pais</label>
+                    <input type="text" class="form-control" id="validationCustom03" required>
+                </div>
+                <div>
+                    <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" id="selector">
+                        <option selected>Seleccione el dibujo que desea</option>
+                        <option value="1">15 Días más</option>
+                        <option value="2">Batman Vampire</option>
+                        <option value="3">Desolate Wasteland</option>
+                        <option value="4">Demonios Internos</option>
+                        <option value="5">Social Distance</option>
+                        <option value="6">Healthcare Heroes</option>
+                        <option value="7">An Unexpected Visit</option>
+                        <option value="8">Extraños Sucesos en el Cementerio</option>
+                        <option value="9">The Hand</option>
+                        <option value="10">Muerte Roja</option>
+                        <option value="11">Pizza y alcohol en gel</option>
+                        <option value="12">Principe Prospero</option>
+                    </select>
+                    <select class="form-select form-select-sm" aria-label=".form-select-sm example" id="selector2">
+                        <option selected>Formato y tamaño</option>
+                        <option value="1">Digital</option>
+                        <option value="2">Impreso, Small(10")</option>
+                        <option value="3">Impreso, Medium(20")</option>
+                        <option value="4">Impreso, Large(32")</option>
+                    </select>
+                </div>
             </form>
+            <div class="col-12" id="boton">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                    <label class="form-check-label" for="invalidCheck">
+                        Acepte los terminos y condiciones
+                    </label>
+                </div>
+            </div>
+            <div class="col-12">
+                <button class="btn btn-primary" type="submit">Enviar</button>
+            </div>
         </section>
     </main>
 
@@ -157,10 +127,10 @@
             <h5>2022, Loan arts ©</h5>
         </section>
         <section id="redes">
-            <a href="https://www.instagram.com/loan_art00/" id="ig">
+            <a href="https://www.instagram.com/loan_art00/" id="ig" alt="instagram">
                 <img src="../Assets/instagram icono.png">
             </a>
-            <a href="https://www.facebook.com/loan.arts.90" id="fb">
+            <a href="https://www.facebook.com/loan.arts.90" id="fb" alt="facebook">
                 <img src="../Assets/png-transparent-facebook-computer-icons-layout-rectangle-logo-brand.png">
             </a>
         </section>
