--- a/pages/SobreMi.html
+++ b/pages/SobreMi.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
-    <meta name="description" content="Hi, i'm Loan. I'm an argentinian illustrator and comic book artist">
+    <title>Sobre mi</title>
+    <meta name="description" content="Hola!, soy Loan, soy un ilustrador y dibujante de cómics argentino">
     <meta name="keywords" content="arte, dibujo, comics, storyboard, layouts">
     <link rel="shortcut icon" href="../Assets/icono.png">
     <link rel="stylesheet" href="../bootstrap-5.2.2-dist/css/bootstrap.css">
@@ -31,27 +31,27 @@
                     <ul class="navbar-nav">
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="../index.html">
-                                <h5>Main</h5>
+                                <h5>Inicio</h5>
                             </a>
                         </li>
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="../pages/Galeria.html">
-                                <h5>Gallery</h5>
+                                <h5>Galeria</h5>
                             </a>
                         </li>
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="../pages/SobreMi.html">
-                                <h5>About Me</h5>
+                                <h5>Sobre mi</h5>
                             </a>
                         </li>
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="../pages/Pedidos.html">
-                                <h5>Purchase</h5>
+                                <h5>Pedidos</h5>
                             </a>
                         </li>
                         <li class="nav-item color_botones">
                             <a class="nav-link" href="../pages/Contacto.html">
-                                <h5>Contact</h5>
+                                <h5>Contacto</h5>
                             </a>
                         </li>
                     </ul>
@@ -63,18 +63,16 @@
     <main>
         <section class="descripcion">
             <div>
-                <h3>About me...</h3>
+                <h3>Sobre mi...</h3>
             </div>
             <div class="texto_descripcion">
-                <h5>Hi, i'm Loan. I'm an argentinian illustrator and comic book artist. My artistic desings are made
-                    with
-                    traditionall and digital techniques such as pencils, inks, watercolor, acrylic, oil and digital
-                    colors with photoshop and
-                    illustrator. also specialize in sketching, character and ser design, storyboarding and layout. Y
-                    think I'm the right guy because I have a wide vesatility in the style and genres to illustrate, I
-                    have extensive knowledge in literature and videogames as well as graphic novels, have experience
-                    collaborating in working groups with scriptwriters and creatives, and I'm also an expert in the
-                    illustration of graphic novels.
+                <h5>
+                    Hola, soy Loan, soy un ilustrador y dibujante de cómics argentino. Mis diseños artísticos están
+                    hechos
+                    con técnicas tradicionales y digitales como lápices, tintas, acuarela, acrílico, óleo y digital
+                    con photoshop e ilustrator. También me especializo en bocetos, diseño de personajes y escenarios, y storyboarding. Creo que soy el tipo adecuado porque tengo una amplia versatilidad en el estilo y géneros para
+                    ilustrar, tengo amplios conocimientos en literatura y videojuegos así como novelas gráficas, tengo experiencia
+                    colaborando en grupos de trabajo y guionistas, y experto en la ilustración de novelas gráficas.
                 </h5>
             </div>
             <div class="imagen_flex"><img src="../Assets/Galeria/reescaladas/loan-art-15-dias-mas-rgb1.jpg"
@@ -87,11 +85,11 @@
             <h5>2022, Loan arts ©</h5>
         </section>
         <section id="redes">
-            <a href="https://www.instagram.com/loan_art00/" id="ig">
+            <a href="https://www.instagram.com/loan_art00/" id="ig" alt="instagram">
                 <img src="../Assets/instagram icono.png">
             </a>
-            <a href="https://www.facebook.com/loan.arts.90" id="fb">
-                <img src="../Assets/png-transparent-facebook-computer-icons-layout-rectangle-logo-brand.png">
+            <a href="https://www.facebook.com/loan.arts.90" id="fb" alt="facebook">
+                <img src="../Assets/png-transparent-facebook-computer-icons-layout-rectangle-logo-brand.png" alt="hombre contando dias de aislamiento">
             </a>
         </section>
     </footer>
