ahora la imagen de la seccion sobre mi adapta su tamaño para pantallas chicas y grandes con medida de pixeles, la clase que le proporcionaba tamaño a dicha imagen se utilza en 2 media queries distintas

--- a/pages/SobreMi.html
+++ b/pages/SobreMi.html
@@ -75,8 +75,8 @@
                     colaborando en grupos de trabajo y guionistas, y experto en la ilustración de novelas gráficas.
                 </h5>
             </div>
-            <div class="imagen_flex"><img src="../Assets/Galeria/reescaladas/loan-art-15-dias-mas-rgb1.jpg"
-                    class="imagen_descripcion"></div>
+            <div class="imagen_flex"><img src="../Assets/Galeria/reescaladas/loan-art-15-dias-mas-rgb1.jpg" class="imagen_descripcion"></div>
+                    
         </section>
     </main>
 
