agregue otro archivo sass que es para todo lo relacionado con margins y paddings que no cambian con las media query y clases max-width, reduciendo a la mitad las lineas de codigo del sass principal, ademas de que ahora hay nesting en todos los sass

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </footer>
 
 
-    <script src="./style/js/wow.min.js"></script>
+    <script src="./Assets/js/wow.min.js"></script>
     <script>
         new WOW().init();
     </script>
